--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ header .container nav ul {
 }
 
 header .container nav ul li {
-  margin: 0 10px;
+  margin: 0 15px;
 }
 
 header .container nav ul li a {
@@ -1698,12 +1698,21 @@ footer .container p span {
   margin-bottom: 20px;
 }
 
+.VisiMisi,
 .TermsCondition,
 .PrivacyPolicy {
   width: 100%;
   height: 100%;
 }
 
+.VisiMisi .visi,
+.TermsCondition .visi,
+.PrivacyPolicy .visi {
+  font-style: italic;
+  font-weight: 700;
+}
+
+.VisiMisi p,
 .TermsCondition p,
 .PrivacyPolicy p {
   margin: 20px 0;
@@ -1711,6 +1720,7 @@ footer .container p span {
   line-height: 30px;
 }
 
+.VisiMisi ul li,
 .TermsCondition ul li,
 .PrivacyPolicy ul li {
   padding: 10px;
@@ -1720,6 +1730,7 @@ footer .container p span {
   list-style: decimal;
 }
 
+.VisiMisi h2,
 .TermsCondition h2,
 .PrivacyPolicy h2 {
   margin: 10px 0;
