--- a/css/style.scss
+++ b/css/style.scss
@@ -174,7 +174,7 @@ header {
                 display: flex;
 
                 li {
-                    margin: 0 10px;
+                    margin: 0 15px;
 
                     a {
                         font-weight: 500;
@@ -1591,10 +1591,16 @@ footer .container p span {
 
 
 // page PrivacyPolicy start 
+.VisiMisi,
 .TermsCondition,
 .PrivacyPolicy {
     width: 100%;
     height: 100%;
+
+    .visi {
+        font-style: italic;
+        font-weight: 700;
+    }
 
     p {
         margin: 20px 0;
