--- a/css/style.css
+++ b/css/style.css
@@ -1667,6 +1667,58 @@ footer .container p span {
   background-color: var(--putih-900);
 }
 
+.containerAlesan {
+  width: 100%;
+  height: 100%;
+}
+
+.containerAlesan .container {
+  padding: 50px 20px;
+  border-radius: 10px;
+  background-color: var(--biru-cerah);
+}
+
+.containerAlesan .container h1 {
+  color: var(--putih);
+  font-size: 2rem;
+}
+
+.containerAlesan .container .alesan {
+  width: 100%;
+  height: 100%;
+  padding-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.containerAlesan .container .alesan .perAlesan {
+  width: calc(90%/3);
+  max-height: 350px;
+  margin: 10px 0;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: var(--putih);
+}
+
+.containerAlesan .container .alesan .perAlesan h2 {
+  margin: 10px 0;
+  font-size: 1.3rem;
+}
+
+.containerAlesan .container .alesan .perAlesan p {
+  font-weight: 500;
+  font-size: .9rem;
+}
+
+.containerAlesan .container .alesan .perAlesan img {
+  width: 70px;
+  height: 70px;
+}
+
 .kontak {
   width: 100%;
 }
