--- a/css/style.scss
+++ b/css/style.scss
@@ -1494,7 +1494,60 @@ footer .container p span {
     }
 }
 
-// Per Detail Kelas End 
+// Per Detail Kelas End
+
+
+
+
+
+
+.containerAlesan {
+    width: 100%;
+    height: 100%;
+
+    .container {
+        padding: 50px 20px;
+        border-radius: 10px;
+        background-color: var(--biru-cerah);
+
+        h1 {
+            color: var(--putih);
+            font-size: 2rem;
+        }
+
+        .alesan {
+            width: 100%;
+            height: 100%;
+            padding-top: 50px;
+            display: flex;
+            justify-content: space-between;
+
+            .perAlesan {
+                width: calc(90%/3);
+                max-height: 350px;
+                margin: 10px 0;
+                padding: 20px;
+                border-radius: 10px;
+                background-color: var(--putih);
+
+                h2 {
+                    margin: 10px 0;
+                    font-size: 1.3rem;
+                }
+
+                p {
+                    font-weight: 500;
+                    font-size: .9rem;
+                }
+
+                img {
+                    width: 70px;
+                    height: 70px;
+                }
+            }
+        }
+    }
+}
 
 
 
