--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,13 @@
   --background-header: linear-gradient(to right, #450b7c, #563cc9);
   --kuningCerah: rgb(255, 160, 17);
   --putih-mandan-ireng: rgb(231, 231, 231);
+  --bg-mandanGelap: #F6F8FD;
   --hero: #111827;
   --hitam-santai: #302f2f;
   --putih: #fff;
   --putih-f2: #f2f2f2;
   --putih-900: #F2F4F7;
+  --putih-f8fafc: #f8fafc;
   --ungu: #963EFF;
   --kuning: #FCE354;
   --biru-cerah: #1352FF;
@@ -996,7 +998,6 @@ header .container .menu span:nth-child(3) {
   height: 100%;
   padding: 0;
   background-color: var(--biru-cerah);
-  /* box-shadow: .5rem 0 1rem rgba(0, 0, 0, 0.1); */
 }
 
 .footer .container {
@@ -1011,21 +1012,21 @@ header .container .menu span:nth-child(3) {
       flex-wrap: wrap;
 }
 
-.footer .box {
+.footer .container .box {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 15rem;
           flex: 1 1 15rem;
   margin: 1rem;
 }
 
-.footer .box h2 {
+.footer .container .box h2 {
   font-size: 2rem;
   font-weight: 600;
   padding: 1rem 0;
   color: var(--putih);
 }
 
-.footer .box p {
+.footer .container .box p {
   font-size: 1rem;
   padding: .5rem 0;
   line-height: 25px;
@@ -1033,44 +1034,7 @@ header .container .menu span:nth-child(3) {
   color: var(--putih);
 }
 
-.footer .box p .pencipta {
-  padding: 0;
-  display: inline-block;
-}
-
-.footer .box .sosmed {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.footer .box .sosmed .perSosmed {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 45px;
-  height: 45px;
-  padding: 10px;
-  font-size: 1.5rem;
-  margin: 0 10px;
-  border-radius: 50%;
-  background: #ffa011;
-}
-
-.footer .box .sosmed .perSosmed:hover {
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.footer .box a {
+.footer .container .box a {
   font-size: 1rem;
   padding: .5rem 0;
   display: -webkit-box;
@@ -1079,7 +1043,12 @@ header .container .menu span:nth-child(3) {
   color: var(--putih);
 }
 
-.footer .box a:hover {
+.footer .container .box a.pencipta {
+  padding: 0;
+  display: inline-block;
+}
+
+.footer .container .box a:hover {
   text-decoration: underline;
 }
 
