--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,7 @@
     --background-header: linear-gradient(to right, #450b7c, #563cc9);
     --kuningCerah: rgb(255, 160, 17);
     --putih-mandan-ireng: rgb(231, 231, 231);
+    --bg-mandanGelap: #F6F8FD;
 
     --hero: #111827;
 
@@ -11,6 +12,7 @@
     --putih: #fff;
     --putih-f2: #f2f2f2;
     --putih-900: #F2F4F7;
+    --putih-f8fafc: #f8fafc;
     --ungu: #963EFF;
     --kuning: #FCE354;
     --biru-cerah: #1352FF;
@@ -817,25 +819,25 @@ header {
     border-top-left-radius: 100px;
     border-top-right-radius: 0;
     background-color: var(--biru-cerah);
+
+    .clientTitle {
+        display: flex;
+        align-items: center;
+
+        h2 {
+            font-size: 2rem;
+            margin-right: 100px;
+            color: var(--putih);
+        }
+
+        p {
+            max-width: 630px;
+            font-size: 1.4rem;
+            color: var(--putih);
+        }
+    }
 }
 
-.containerClient .clientTitle {
-    display: flex;
-    align-items: center;
-}
-
-
-.containerClient .clientTitle h2 {
-    font-size: 2rem;
-    margin-right: 100px;
-    color: var(--putih);
-}
-
-.containerClient .clientTitle p {
-    max-width: 630px;
-    font-size: 1.4rem;
-    color: var(--putih);
-}
 
 
 
@@ -843,41 +845,39 @@ header {
     width: 100%;
     padding: 0;
     background-color: var(--biru-cerah);
+
+    .container {
+        width: 95%;
+        padding: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: var(--hero);
+        border-top-right-radius: 100px;
+
+        .caption {
+            width: 45%;
+
+            h2 {
+                color: var(--putih);
+                letter-spacing: .5px;
+                line-height: 50px;
+                font-size: 2.3rem;
+                margin-bottom: 20px;
+            }
+
+            p {
+                color: var(--putih);
+                font-size: 1.2rem;
+                letter-spacing: .5px;
+                line-height: 27px;
+            }
+
+
+        }
+
+    }
 }
-
-.containerKerjasama .container {
-    width: 95%;
-    padding: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: var(--hero);
-    // background-color: #221E41;
-    border-top-right-radius: 100px;
-}
-
-.containerKerjasama .container .caption {
-    width: 45%;
-}
-
-.containerKerjasama .container .caption h2 {
-    color: var(--putih);
-    letter-spacing: .5px;
-    line-height: 50px;
-    font-size: 2.3rem;
-    margin-bottom: 20px;
-}
-
-.containerKerjasama .container .caption p {
-    color: var(--putih);
-    font-size: 1.2rem;
-    letter-spacing: .5px;
-    line-height: 27px;
-}
-
-
-
-
 
 
 /* footer start */
@@ -886,78 +886,51 @@ header {
     height: 100%;
     padding: 0;
     background-color: var(--biru-cerah);
-    /* box-shadow: .5rem 0 1rem rgba(0, 0, 0, 0.1); */
-}
 
-.footer .container {
-    width: 95%;
-    padding: 0 100px;
-    padding-bottom: 100px;
-    background-color: var(--hero);
-    // background-color: #221E41;
-    display: flex;
-    flex-wrap: wrap;
-}
+    .container {
+        width: 95%;
+        padding: 0 100px;
+        padding-bottom: 100px;
+        background-color: var(--hero);
+        display: flex;
+        flex-wrap: wrap;
 
-.footer .box {
-    flex: 1 1 15rem;
-    margin: 1rem;
-}
+        .box {
+            flex: 1 1 15rem;
+            margin: 1rem;
 
+            h2 {
+                font-size: 2rem;
+                font-weight: 600;
+                padding: 1rem 0;
+                color: var(--putih);
+            }
 
-.footer .box h2 {
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 1rem 0;
-    color: var(--putih);
-}
+            p {
+                font-size: 1rem;
+                padding: .5rem 0;
+                line-height: 25px;
+                margin-bottom: 30px;
+                color: var(--putih);
+            }
 
-.footer .box p {
-    font-size: 1rem;
-    padding: .5rem 0;
-    line-height: 25px;
-    margin-bottom: 30px;
-    color: var(--putih);
-}
+            a {
+                font-size: 1rem;
+                padding: .5rem 0;
+                display: flex;
+                color: var(--putih);
 
-.footer .box p .pencipta {
-    padding: 0;
-    display: inline-block;
-}
+                &.pencipta {
+                    padding: 0;
+                    display: inline-block;
+                }
 
-.footer .box .sosmed {
-    display: flex;
-}
-
-
-.footer .box .sosmed .perSosmed {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 45px;
-    height: 45px;
-    padding: 10px;
-    font-size: 1.5rem;
-    margin: 0 10px;
-    border-radius: 50%;
-    background: rgb(255, 160, 17);
-}
-
-.footer .box .sosmed .perSosmed:hover {
-    transform: rotate(360deg);
-    transition: 1s;
-}
-
-
-.footer .box a {
-    font-size: 1rem;
-    padding: .5rem 0;
-    display: flex;
-    color: var(--putih);
-}
-
-.footer .box a:hover {
-    text-decoration: underline;
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
 }
 
 
@@ -967,28 +940,28 @@ footer {
     height: 8vh;
     margin: 0;
     background-color: var(--biru-cerah);
-}
 
-footer .container {
-    width: 95%;
-    padding-left: 100px;
-    font-size: 1.1rem;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    text-align: left;
-    background-color: var(--hero);
-    // background-color: #221E41;
-}
+    .container {
+        width: 95%;
+        padding-left: 100px;
+        font-size: 1.1rem;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        text-align: left;
+        background-color: var(--hero);
 
-footer .container p {
-    color: var(--putih);
-}
+        p {
+            color: var(--putih);
 
-footer .container p span {
-    color: #FE4F63;
-    font-size: 23px;
-    margin: 0 0.1rem;
+            span {
+                color: #FE4F63;
+                font-size: 23px;
+                margin: 0 0.1rem;
+            }
+        }
+    }
+
 }
 
 /* footer end */
